<resources>
    <string name="app_name">FilmRave</string>
    <string name="where_to_watch">Where to watch</string>
    <string name="more_like_this">More Like this</string>
    <string name="endless_entertainment_for_everyone">Endless Entertainment for Everyone</string>
    <string name="app_terms">By proceeding you confirm that you are above 18 years of age and agree to the Privacy Policy and Terms of Use</string>
    <string name="continue_btn">Continue ></string>
    <string name="open_settings">OPEN SETTINGS</string>
    <string name="search">Search...</string>
    <string name="popular_searches">POPULAR SEARCHES</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_connection">No Internet Connection...</string>
    <string name="please_check_your_internet_settings">Please check your internet settings...</string>
    <string name="your_watch_list">Your Watch-List</string>
    <string name="add_a_movie">Add a movie</string>
    <string name="your_watchlist_is_empty">Your watchlist is empty</string>
    <string name="movie_added">Movie is added in your watchlist</string>
    <string name="movie_deleted">Movie is deleted from your watchlist</string>
    <string name="information_not_available">Information not available</string>
    <string name="internet_connection_required">Internet Connection required</string>
    <string name="recommendations_not_available">Recommendations not available</string>
    <string name="no_data_found">No data found</string>
</resources>