<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_bg"
        tools:context="presentation.search.SearchFragment">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white" />

                <RelativeLayout
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/ic_search_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/search_query_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toStartOf="@id/ic_search_icon"
                        android:backgroundTint="@color/gray_shade_1"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:lines="1"
                        android:paddingVertical="@dimen/_8sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_secondary"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/ic_search_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:src="@drawable/iv_search"
                        app:tint="@color/text_secondary" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_20sdp">

                <ImageView
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/trend_icon"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/popular_searches"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_searches_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_top_movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searched_result_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="10"
                tools:listitem="@layout/item_poster" />

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="center"
            app:cardBackgroundColor="@color/dark_bg">

            <LinearLayout
                android:id="@+id/layout_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/storm_icon"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/whoops"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/no_internet_connection"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/please_check_your_internet_settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/open_settings_btn"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:cardBackgroundColor="@color/gray_shade_1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:id="@+id/watch_now_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:src="@drawable/baseline_perm_data_setting_24"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/open_settings"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8sdp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <ProgressBar
            android:id="@+id/progressBarOuter"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/azureish_white"
            android:visibility="gone" />

    </FrameLayout>
</layout>